# SyncOrSink

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
benchmarks/: pipeline_presets.json  syncorsink_v0_1.json  syncorsink_v0_2.json  transformer_presets.json
docs/: baselines_rl.md  baselines_transformer.md  benchmark_versions.md  communication_audit.md  config.md  design.md  docs_site.md  eval_and_logging.md  experiment_report.md  experts.md  index.md  leaderboard.md  leaderboard_results.csv  leaderboard_results.json  leaderboard_results.md  masked_baseline_smoke.md  policy_submissions.md  procedural_packs.md  scenario_registry.md  scenarios.md
examples/: bc_rl_curriculum.py  bc_train.py  benchmark_run.py  benchmark_spec.json  build_leaderboard.py  comm_mat_train.py  communication_ablation_sweep.py  core_training_sweep.py  eval_from_spec.py  eval_llm.py  eval_run.py  eval_split.py  external_policy.py  list_scenario_packs.py  list_scenarios.py  llm_tool_stub.py  mappo_decoding_sweep.py  mappo_train.py  recurrent_train.py  run_energy.py  run_human.py  run_pettingzoo.py  run_pipeline.py  run_pygame.py  run_signal_hunt.py  run_vector.py  solvability_check.py  tarmac_train.py  train_eval_workbench.py  trajectory_audit.py  validate_leaderboard.py
results/: README.md
scripts/: run_bc_to_rl.sh  run_bc_to_rl_v2.sh  run_comm_mat.sh  run_comm_mat_ablation.sh  run_comm_mat_all.sh  run_comm_mat_v2.sh  run_comm_mat_v3.sh  run_energy_16x16_hard.sh  run_energy_comm_test.sh  run_energy_hard.sh  run_energy_private_monitor.sh  run_irl_mappo.sh  (+12 more)
(+95 files in other folders)
