[project]
name = "syncorsink"
version = "0.1.0"
description = "SyncOrSink: communication-focused cooperative multi-agent POMDP benchmark"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SyncOrSink Contributors" }]

dependencies = [
  "gymnasium>=0.29.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
pettingzoo = ["pettingzoo>=1.24.0"]
render = ["pygame>=2.5.0"]
eval = ["jsonschema>=4.0.0"]
train = ["torch>=2.0.0"]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["syncorsink*"]
